@@ -33,6 +33,9 @@ if compiler optimization was enabled when libjpeg-turbo was built.  This caused
 the regression tests to fail when doing a release build under Visual C++ 2010
 and later.
 
+[9] Fixed a segfault that occurred when calling output_message() with msg_code
+set to JMSG_COPYRIGHT.
+
 
 1.2.1
 =====
